	(twittering-make-field-id): attach a greater field ID to normal
	tweets than its ancestor tweets.

	* twittering-mode.el: Use a common macro for rendering a status.
	(twittering-render-a-field): new macro for rendering a status.
	(twittering-render-timeline): use `twittering-render-a-field'.
	(twittering-show-replied-statuses): use
	`twittering-render-a-field'.

2011-10-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Keep the private information unless the
	server explicitly informs that it is invalid.
	(twittering-verify-credentials): display the reason of
	authorization failure.
	(twittering-http-get-verify-credentials-sentinel): keep the
	private information for authorization unless the server returns
	401(Unauthorized) as the HTTP response status code.

2011-10-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Bind `default-directory' to the temporary
	directory to avoid problems caused by executing programs on
	a removed directory. Thanks to tomykaira who reported the problem.
	(twittering-send-http-request-internal): locally bind the variable
	`default-directory' to the temporary directory in order to prevent
	Emacs from executing an external program in the invalid condition
	where `default-directory' points to a directory which has been
	already removed.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-sha1): likewise.
	(twittering-read-from-encrypted-file): likewise.
	(twittering-write-and-encrypt): likewise.
	(twittering-convert-image-data): likewise.
	(twittering-save-icon-properties): likewise.
	(twittering-load-icon-properties): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.

2011-10-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the argument of the function
	`twittering-read-username-with-completion'. Thanks to Akira
	Tamamori who reported a problem caused by the bug.
	(twittering-read-timeline-spec-with-completion): fix the argument