@@ -17,6 +17,13 @@
 	(twittering-show-replied-statuses): use
 	`twittering-render-a-field'.
 
+	* twittering-mode.el: Accept list names including non-ASCII
+	characters.
+	(twittering-extract-timeline-spec): accept list names including
+	non-ASCII characters.
+	* test/test-twittering-mode.el (timeline-spec): add a test for a
+	list name including non-ASCII characters.
+
 2011-10-23  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el: Keep the private information unless the
